# task-quality-and-benchmark

./: .gitignore  Makefile  README.md  pipeline.env  pipeline.env.example  run_pipeline.sh  setup.sh
SWE-agent/: .env.example  README.md  command.txt  convert_tasks.py  run_5_trails.sh
SWE-agent/config/: opus47.yaml
SWE-agent/config/benchmarks/: 250212_sweagent_heavy_sbl.yaml  250225_anthropic_filemap_simple_review.yaml
SWE-agent/docs/: index.md
SWE-agent/docs/usage/: batch_mode.md  inspector.md  trajectories.md
SWE-agent/sweagent/agent/: models.py
SWE-agent/sweagent/environment/: repo.py
SWE-agent/tasks/: pygments_16python_tasks_scoped.jsonl  pygments_16python_tasks_scoped_sweagent.jsonl  rust_tasks.jsonl
SWE-agent/tests/: test_models.py  test_swesmith.py
SWE-bench-modified/: README.md  default__claude-opus-4-7__t-0.00__p-None__c-3.00___pygments_16python_tasks_scoped_sweagent___trial_1.pygments_16python_tasks_scoped_trial_1.json  gold.pygments_16python_tasks_scoped_gold.json  gold.rubric_gold.json  gold.rust_tasks_gold.json  mkdocs.yml  pyproject.toml
SWE-bench-modified/docs/: README.md  index.md  installation.md
SWE-bench-modified/tests/: test_harness_utils.py  test_jsonl_register.py  test_key_normalization.py  test_log_parsers_java.py  test_pygments_pytest_scope.py  test_rspec_junit_grading.py  test_vitest_junit_grading.py
task_analyze/: pyproject.toml
task_analyze/src/task_analyze/: __init__.py  classifier.py  classify_prompt.txt  claude_code_utils.py  cli.py  context.py  discovery.py  models.py  run.py  verdict_prompt.txt
(+31 files in other folders)
