[project]
name = "task-analyze"
version = "0.1.0"
description = "LLM trial classification and verdict synthesis for SWE-bench tasks"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.20",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
task-classify = "task_analyze.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_analyze"]
